// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fontSynthesis renders 0 1`] = `
Array [
  .c0 {
  font-synthesis: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`fontSynthesis renders function 1`] = `
Array [
  .c0 {
  font-synthesis: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis: has;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis: has;
}

<div
    className="c0"
  />,
]
`;

exports[`fontSynthesis renders invalid theme path 1`] = `
Array [
  .c0 {
  font-synthesis: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`fontSynthesis renders negative number 1`] = `
Array [
  .c0 {
  font-synthesis: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontSynthesis renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  font-synthesis: July;
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-synthesis: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis: July;
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-synthesis: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-synthesis: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-synthesis: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontSynthesis renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    font-synthesis: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-synthesis: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    font-synthesis: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-synthesis: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-synthesis: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-synthesis: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-synthesis: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontSynthesis renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  font-synthesis: July;
}

@media May {
  .c0 {
    font-synthesis: August;
  }
}

@media April {
  .c0 {
    font-synthesis: September;
  }
}

@media January {
  .c0 {
    font-synthesis: November;
  }
}

@media April {
  .c0 {
    font-synthesis: August;
  }
}

@media June {
  .c0 {
    font-synthesis: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis: July;
}

@media May {
  .c0 {
    font-synthesis: August;
  }
}

@media April {
  .c0 {
    font-synthesis: September;
  }
}

@media January {
  .c0 {
    font-synthesis: November;
  }
}

@media April {
  .c0 {
    font-synthesis: August;
  }
}

@media June {
  .c0 {
    font-synthesis: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-synthesis: November;
  }
}

@media April {
  .c0 {
    font-synthesis: January;
  }
}

@media January {
  .c0 {
    font-synthesis: December;
  }
}

@media April {
  .c0 {
    font-synthesis: April;
  }
}

@media June {
  .c0 {
    font-synthesis: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-synthesis: November;
  }
}

@media April {
  .c0 {
    font-synthesis: January;
  }
}

@media January {
  .c0 {
    font-synthesis: December;
  }
}

@media April {
  .c0 {
    font-synthesis: April;
  }
}

@media June {
  .c0 {
    font-synthesis: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontSynthesis renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    font-synthesis: July;
  }
}

@media April {
  .c0 {
    font-synthesis: August;
  }
}

@media January {
  .c0 {
    font-synthesis: September;
  }
}

@media April {
  .c0 {
    font-synthesis: November;
  }
}

@media June {
  .c0 {
    font-synthesis: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    font-synthesis: July;
  }
}

@media April {
  .c0 {
    font-synthesis: August;
  }
}

@media January {
  .c0 {
    font-synthesis: September;
  }
}

@media April {
  .c0 {
    font-synthesis: November;
  }
}

@media June {
  .c0 {
    font-synthesis: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-synthesis: January;
  }
}

@media April {
  .c0 {
    font-synthesis: December;
  }
}

@media January {
  .c0 {
    font-synthesis: April;
  }
}

@media April {
  .c0 {
    font-synthesis: May;
  }
}

@media June {
  .c0 {
    font-synthesis: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-synthesis: January;
  }
}

@media April {
  .c0 {
    font-synthesis: December;
  }
}

@media January {
  .c0 {
    font-synthesis: April;
  }
}

@media April {
  .c0 {
    font-synthesis: May;
  }
}

@media June {
  .c0 {
    font-synthesis: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontSynthesis renders postitive number 1`] = `
Array [
  .c0 {
  font-synthesis: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontSynthesis renders string 1`] = `
Array [
  .c0 {
  font-synthesis: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis: June;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis: June;
}

<div
    className="c0"
  />,
]
`;

exports[`fontSynthesis renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`fontSynthesis renders valid theme path 1`] = `
Array [
  .c0 {
  font-synthesis: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-synthesis: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
